syntax = "proto3";

package cloud.lianmi.im.team;
option go_package = "github.com/lianmi/servers/api/proto/team";

//
//拒绝群申请-请求
//管理员拒绝加群
message RejectTeamApplyReq {
    //申请方账号
    //是否必须：是
    string from = 1;
    //群组ID
    //是否必须：是
    string teamId = 2;
    //工作流ID
    //是否必填-是
    string workflowID = 3;  
    //附件信息
    //是否必须：是
    string ps = 4;

}
//
//拒绝群申请-响应
//只包含状态码，无内容载体
message RejectTeamApplyRsp {

}
